--- a/README.adoc
+++ b/README.adoc
@@ -12,6 +12,7 @@ learning material that share the following principles:
 - Good documentation.
 - Clear state of development.
 - Easy way to contribute.
+- Support Clojure & ClojureScript when possible.
 - Beautiful is better than ugly.
 - Explicit is better than implicit.
 - Simple is better than complex.
@@ -80,7 +81,7 @@ An open source book about ClojureScript
 
 === cats
 
-Category Theory abstractions for Clojure.
+Category Theory abstractions for Clojure(Script).
 
 - Code: https://github.com/funcool/cats
 - Documentation: http://funcool.github.io/cats/
@@ -113,7 +114,7 @@ A idiomatic ClojureScript interface to local and session storage.
 
 === cuerdas
 
-The missing clojurescript string manipulation library.
+The missing Clojure(Script) string manipulation library.
 
 - Code: https://github.com/funcool/cuerdas
 - Documentation: https://funcool.github.io/cuerdas
